Added Mission facultative - Partie 2 - Identifiez les causes d'attrition au sein d'une ESN

--- a/notebooks/02_RC_Feature_Engineering.ipynb
+++ b/notebooks/02_RC_Feature_Engineering.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 137,
    "id": "a0de4270-c0e9-430c-bb21-ac73d443a8a5",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 138,
    "id": "b5871e8f-cece-4553-ac82-bb1c8f117c21",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 139,
    "id": "a2663806-d485-4303-9a8a-e367241e1cf2",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 140,
    "id": "c39bea67-b5e8-48d7-bb06-d84e6300e732",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
       "==================================================================================================\n",
       "  Objet créé............: DataCleaner\n",
       "  Mode verbeux..........: Activé (Diagnostic temps réel)\n",
-      "  Source de données.....: dataset_raw (ID: 2645659273648)\n",
+      "  Source de données.....: dataset_raw (ID: 2645619483968)\n",
       "  Statut................: ✅ Prêt pour l'étape de transformation\n",
       "==================================================================================================\n",
       "\n"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 141,
    "id": "0c8c5a4c-fb38-40e0-8190-24089e2dd0d7",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 142,
    "id": "a7647914-3dbd-46ce-986a-44bcf926491f",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 143,
    "id": "1e2b0b6e-3a92-429e-8436-89c1666568a4",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 144,
    "id": "5a4d1838-f1e3-4e18-b194-af317400d584",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 145,
    "id": "b24965a9-71b5-4038-a1ae-6fbf90100cbc",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 146,
    "id": "014a0696-ea9f-455a-863a-adf6798d29b9",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
        "['id', 'id_employee', 'eval_number', 'code_sondage']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 147,
    "id": "459c896c-3d9d-41e6-a308-1f26dce26fec",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        " 'ayant_enfants']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 148,
    "id": "2bb701f1-fc65-4237-af69-d9a1af7c5c87",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "[]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 149,
    "id": "332bd328-d6e6-4859-b349-706ecfb67e97",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 150,
    "id": "64a6d6e8-75bf-43ce-aa39-f79fa6bf04e3",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        " 'frequence_deplacement']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 151,
    "id": "4a5451ce-b8b1-4ad9-bf9a-20e785f5e3fa",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 152,
    "id": "ea8a0975-e3f0-4ea4-b4dc-2068fcdec8b0",
    "metadata": {},
    "outputs": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 153,
    "id": "de10e853-6c73-464c-b614-4c82c92ec001",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 154,
    "id": "79aea76f-bf72-498e-a486-b0dde770f57a",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2054,7 @@
        "frequence_deplacement  0.037174        0.034524     0.000000  0.000000       0.000000               1.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 155,
    "id": "10252821-4c1e-4e5a-ba0d-615ef25038d2",
    "metadata": {},
    "outputs": [],
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 156,
    "id": "a974d95c-9c63-443b-984c-4bef5d30033c",
    "metadata": {},
    "outputs": [
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 157,
    "id": "ab0aefbd-4931-4382-9900-31aeb7d263ab",
    "metadata": {},
    "outputs": [],
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 158,
    "id": "f1f63042-0468-4dad-882e-649bfe1d4b70",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 159,
    "id": "7d02483b-cc2a-4015-9dd8-8c883b91ff80",
    "metadata": {},
    "outputs": [
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 160,
    "id": "78b33cd0-45be-4a3d-840e-3823c8d40628",
    "metadata": {},
    "outputs": [
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 161,
    "id": "d7cf0c93-353c-4734-8691-c58f4621758f",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 162,
    "id": "c0911d83-9425-4fb0-8ba6-5da6f90cbad2",
    "metadata": {},
    "outputs": [
@@ -2527,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 163,
    "id": "6f31564b-f5d1-47d6-8c2e-a35798f14110",
    "metadata": {},
    "outputs": [
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 164,
    "id": "3cc0d156-fff3-40e2-b6b8-41e3971bba52",
    "metadata": {},
    "outputs": [
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 165,
    "id": "d94475d3-a9e0-41b8-817d-e8c751e219fe",
    "metadata": {},
    "outputs": [],
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 166,
    "id": "0ec03c89-4ea6-4ffb-bbd4-8708c9a5a6e2",
    "metadata": {},
    "outputs": [
@@ -2673,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 167,
    "id": "7ee3a755-8c3a-4c95-8039-482baf9697ea",
    "metadata": {},
    "outputs": [
@@ -2739,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 168,
    "id": "7a7a1e70-fc8a-4759-94bb-cd778c9ed858",
    "metadata": {},
    "outputs": [
@@ -2799,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 169,
    "id": "a837a618-8bb7-466b-9dd3-8e2ed28391e7",
    "metadata": {},
    "outputs": [
@@ -2988,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 170,
    "id": "7cec1489-926e-48e5-80ce-5b38676fed8b",
    "metadata": {},
    "outputs": [
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 171,
    "id": "7a36e599-efc1-4208-83cd-3053f0c6a532",
    "metadata": {},
    "outputs": [
@@ -3081,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 172,
    "id": "4a737b04-cf87-4aae-9cb9-430ed28e8451",
    "metadata": {},
    "outputs": [
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 173,
    "id": "430e5362-5a0d-4dc8-9e43-07253668ce91",
    "metadata": {},
    "outputs": [
@@ -3245,7 +3245,7 @@
        "35"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3265,7 +3265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 174,
    "id": "5058fb55-3dbd-4d36-8371-5b2a265c7ec8",
    "metadata": {},
    "outputs": [
@@ -3323,7 +3323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 175,
    "id": "26f1b98e-0d5b-47f1-8e2e-236f4fc6e058",
    "metadata": {},
    "outputs": [],
@@ -3382,7 +3382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 176,
    "id": "13d187b0-dff6-40a5-9528-1c446feb45d8",
    "metadata": {},
    "outputs": [],
@@ -3406,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 177,
    "id": "d1c13245-ed29-4d3f-8eb0-3ef649c5f3e4",
    "metadata": {},
    "outputs": [],
@@ -3494,7 +3494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 178,
    "id": "e73d06d9-f3a2-4f94-86b0-9fddbea5d25c",
    "metadata": {},
    "outputs": [
@@ -3853,7 +3853,7 @@
        "[1470 rows x 25 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3867,7 +3867,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 179,
+   "id": "bcdf8297-5967-4a49-bc9f-ff984cdd4a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['revenu_mensuel',\n",
+       " 'annee_experience_totale',\n",
+       " 'annees_dans_l_entreprise',\n",
+       " 'annees_depuis_la_derniere_promotion']"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.COLS_TO_LOG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "d78b81d3-89e9-4d0b-85c0-814e15b408f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.COLS_TO_ROBUST\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "309503bd-50e9-4e49-9931-ecea50972112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['age',\n",
+       " 'nombre_experiences_precedentes',\n",
+       " 'annees_dans_le_poste_actuel',\n",
+       " 'satisfaction_employee_environnement',\n",
+       " 'note_evaluation_precedente',\n",
+       " 'satisfaction_employee_nature_travail',\n",
+       " 'satisfaction_employee_equipe',\n",
+       " 'satisfaction_employee_equilibre_pro_perso',\n",
+       " 'note_evaluation_actuelle',\n",
+       " 'heure_supplementaires',\n",
+       " 'augementation_salaire_precedente',\n",
+       " 'nombre_participation_pee',\n",
+       " 'nb_formations_suivies',\n",
+       " 'distance_domicile_travail',\n",
+       " 'niveau_education',\n",
+       " 'annes_sous_responsable_actuel',\n",
+       " 'attrition_binary']"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.COLS_STANDARD "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "8624d5c8-a457-4fb6-ab46-8e916a43a23c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['genre', 'statut_marital', 'poste', 'domaine_etude', 'frequence_deplacement']"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.COLS_ONE_HOT_ENCODING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "d9dbc531-a3e1-4626-9ea4-ce899bf03479",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.COLS_TARGET_ADVANCED_ENCODING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "id": "a36af3f7-e6fc-4286-82d9-2d91ca4bd502",
    "metadata": {},
    "outputs": [],
@@ -3895,7 +4019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 185,
    "id": "6d9a7b1a-ce78-4fee-a39c-24fc7cc14f2d",
    "metadata": {},
    "outputs": [],
@@ -3938,7 +4062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 186,
    "id": "61cfdc21-5d76-4cdf-9ac0-cdd1a067f81f",
    "metadata": {},
    "outputs": [
@@ -4273,7 +4397,7 @@
        "[1470 rows x 43 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4294,7 +4418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 187,
    "id": "283d9efe-d423-4a43-808e-1baf81ea97e9",
    "metadata": {},
    "outputs": [
@@ -4329,7 +4453,7 @@
        "np.True_"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4414,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 188,
    "id": "05427692-76eb-4d3f-9cd6-5701d422b43a",
    "metadata": {},
    "outputs": [
@@ -4444,7 +4568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 189,
    "id": "60ae0e3a-fba4-4f0d-9b1d-c0f002d6ee1a",
    "metadata": {},
    "outputs": [
@@ -4478,8 +4602,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "id": "513399e6-3aef-4ca0-80e9-2491e0f4f69f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ COLUMNTRANSFORMER sauvegardé : ..\\data\\processed\\0_BEST_COLUMNTRANSFORMER_PACK.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Créer un pack complet (Version Robuste)\n",
+    "export_data = {\n",
+    "    'preprocessor' : preprocessing_pipe['preproc']       # LE COLUMNTRANSFORMER \n",
+    "}\n",
+    "\n",
+    "# Sauvegarde\n",
+    "output_path = PREPROCESED_DIR / \"0_BEST_COLUMNTRANSFORMER_PACK.joblib\"\n",
+    "joblib.dump(export_data, output_path)\n",
+    "\n",
+    "print(f\"✅ COLUMNTRANSFORMER sauvegardé : {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3555d454-be78-4fda-8e2d-0fe663af6aed",
    "metadata": {},
    "outputs": [],
    "source": []
