Ajoute recherche dhyperparamètres abant interpretation

--- a/notebooks/01_RC_EDA_Nettoyage.ipynb
+++ b/notebooks/01_RC_EDA_Nettoyage.ipynb
@@ -13,7 +13,18 @@
     "\n",
     "## **Objectif**: Identifier les causes racines de l'attrition et prédire le départ des collaborateurs à l'aide de **XGBoost** et **SHAP**.\n",
     "\n",
-    "# <span style=\"color:red\"> 🔍 Étape 1 - Effectuez une analyse exploratoire des fichiers de données</span>\n"
+    "# <span style=\"color:red\"> 🔍 Étape 1 - Effectuez une analyse exploratoire des fichiers de données</span>\n",
+    "\n",
+    "\n",
+    "Sans surprise, la première chose à faire serait de mener une <span style=\"color:red\">analyse exploratoire des différents fichiers pour faire ressortir des différences clés</span> entre les employés ayant quitté l’entreprise et ceux qui y sont encore. Ce seront des insights importants à formaliser pour les RH !\n",
+    "\n",
+    "Pour te faciliter les choses, nous avons pu compiler 3 fichiers de données, chacun issu d’une source différente :\n",
+    "\n",
+    "* **extrait_sirh.csv**: Un **extrait de notre système SIRH** où l’on va trouver des informations sur la fonction qu’occupe un employé chez nous  ainsi que son âge, salaire, ancienneté etc.) ainsi que ses informations sociodémographiques.\n",
+    "\n",
+    "* **extrait_eval.csv**: **Un extrait d’un autre SI** que l’on utilise spécifiquement pour les **évaluations annuelles de performance**. On y retrouve des informations telles que les notes de ces évaluations et des notes de satisfaction données par les employés.\n",
+    "\n",
+    "* **extrait_sondage.csv**: Enfin, nous demandons aussi à tous nos employés de remplir **annuellement un sondage** qui nous aide à mettre en place des actions pour le bien-être des employés. Voici à disposition l’extrait du sondage le plus récent. Nous y avons ajouté un <span style=\"color:red\">témoin pour indiquer si l’employé a quitté l’entreprise ou non</span>.\n"
    ]
   },
   {
@@ -1250,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "99cad2f6-17f9-4297-8e15-2da43563ee9c",
    "metadata": {},
    "outputs": [
