--- a/notebooks/03_RC_Modelisation.ipynb
+++ b/notebooks/03_RC_Modelisation.ipynb
@@ -13,7 +13,10 @@
     "\n",
     "## **Objectif**: Identifier les causes racines de l'attrition et prédire le départ des collaborateurs à l'aide de **XGBoost** et **SHAP**.\n",
     "\n",
-    "# <span style=\"color:red\"> 🏷️ Étape 3 - Réalisation d’un premier modèle de classification</span>\n"
+    "# <span style=\"color:red\"> 🏷️ Étape 3 - Réalisation d’un premier modèle de classification</span>\n",
+    "\n",
+    "\n",
+    "Ensuite, il faudra que tu réalises un <span style=\"color:red\">modèle de classification</span>. L’algorithme apprendra à partir des fichiers de données à scorer la **probabilité de démission de chaque employé**. \n"
    ]
   },
   {
@@ -638,6 +641,56 @@
     "print(f\"  Ensemble Test.........: {len(X_test)}  lignes ({prop_test:.1f}%)\")\n",
     "print(f\"  Variables prédictives.: {X_train.shape[1]}\")\n",
     "print(\"  Status................: ✅ Segmentation effectuée avec succès\")\n",
+    "print(\"============================================================================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1bec0f3d-11a3-44c0-90ca-a0744392caa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================================\n",
+      "ÉQUILIBRE DE LA CIBLE (TARGET)\n",
+      "============================================================================\n",
+      "\n",
+      "Distribution des classes - Dataset Complet:\n",
+      "  Classe [0]: 1233 lignes (83.9%)\n",
+      "  Classe [1]: 237 lignes (16.1%)\n",
+      "\n",
+      "Distribution des classes - Ensemble Train:\n",
+      "  Classe [0]: 978 lignes (83.2%)\n",
+      "  Classe [1]: 198 lignes (16.8%)\n",
+      "\n",
+      "Distribution des classes - Ensemble Test:\n",
+      "  Classe [0]: 255 lignes (86.7%)\n",
+      "  Classe [1]: 39 lignes (13.3%)\n",
+      "============================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# ANALYSE DU DÉSÉQUILIBRE DE CLASSES (TARGET)\n",
+    "# ----------------------------------------------------------------------------\n",
+    "def afficher_equilibre(y, label):\n",
+    "    counts = y.value_counts()\n",
+    "    percent = y.value_counts(normalize=True) * 100\n",
+    "    print(f\"\\nDistribution des classes - {label}:\")\n",
+    "    for cls in counts.index:\n",
+    "        print(f\"  Classe [{cls}]: {counts[cls]} lignes ({percent[cls]:.1f}%)\")\n",
+    "\n",
+    "print(\"\\n============================================================================\")\n",
+    "print(\"ÉQUILIBRE DE LA CIBLE (TARGET)\")\n",
+    "print(\"============================================================================\")\n",
+    "afficher_equilibre(y_prep, \"Dataset Complet\")\n",
+    "afficher_equilibre(y_train, \"Ensemble Train\")\n",
+    "afficher_equilibre(y_test, \"Ensemble Test\")\n",
     "print(\"============================================================================\")"
    ]
   },
