--- a/notebooks/02_RC_Feature_Engineering.ipynb
+++ b/notebooks/02_RC_Feature_Engineering.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "id": "a0de4270-c0e9-430c-bb21-ac73d443a8a5",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "id": "b5871e8f-cece-4553-ac82-bb1c8f117c21",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "id": "a2663806-d485-4303-9a8a-e367241e1cf2",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "id": "c39bea67-b5e8-48d7-bb06-d84e6300e732",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
       "==================================================================================================\n",
       "  Objet créé............: DataCleaner\n",
       "  Mode verbeux..........: Activé (Diagnostic temps réel)\n",
-      "  Source de données.....: dataset_raw (ID: 2645619483968)\n",
+      "  Source de données.....: dataset_raw (ID: 2207060220512)\n",
       "  Statut................: ✅ Prêt pour l'étape de transformation\n",
       "==================================================================================================\n",
       "\n"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "id": "0c8c5a4c-fb38-40e0-8190-24089e2dd0d7",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "id": "a7647914-3dbd-46ce-986a-44bcf926491f",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "id": "1e2b0b6e-3a92-429e-8436-89c1666568a4",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "id": "5a4d1838-f1e3-4e18-b194-af317400d584",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "id": "b24965a9-71b5-4038-a1ae-6fbf90100cbc",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "id": "014a0696-ea9f-455a-863a-adf6798d29b9",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
        "['id', 'id_employee', 'eval_number', 'code_sondage']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 11,
    "id": "459c896c-3d9d-41e6-a308-1f26dce26fec",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        " 'ayant_enfants']"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 12,
    "id": "2bb701f1-fc65-4237-af69-d9a1af7c5c87",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "[]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 13,
    "id": "332bd328-d6e6-4859-b349-706ecfb67e97",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 14,
    "id": "64a6d6e8-75bf-43ce-aa39-f79fa6bf04e3",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        " 'frequence_deplacement']"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 15,
    "id": "4a5451ce-b8b1-4ad9-bf9a-20e785f5e3fa",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 18,
    "id": "ea8a0975-e3f0-4ea4-b4dc-2068fcdec8b0",
    "metadata": {},
    "outputs": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "id": "de10e853-6c73-464c-b614-4c82c92ec001",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "id": "79aea76f-bf72-498e-a486-b0dde770f57a",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2054,7 @@
        "frequence_deplacement  0.037174        0.034524     0.000000  0.000000       0.000000               1.000000"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2065,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 21,
+   "id": "2b33d503-2ed9-476b-81b0-0967900334c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'genre', 'revenu_mensuel', 'statut_marital', 'departement',\n",
+       "       'poste', 'nombre_experiences_precedentes', 'annee_experience_totale',\n",
+       "       'annees_dans_l_entreprise', 'annees_dans_le_poste_actuel',\n",
+       "       'satisfaction_employee_environnement', 'note_evaluation_precedente',\n",
+       "       'niveau_hierarchique_poste', 'satisfaction_employee_nature_travail',\n",
+       "       'satisfaction_employee_equipe',\n",
+       "       'satisfaction_employee_equilibre_pro_perso', 'note_evaluation_actuelle',\n",
+       "       'heure_supplementaires', 'augementation_salaire_precedente',\n",
+       "       'a_quitte_l_entreprise', 'nombre_participation_pee',\n",
+       "       'nb_formations_suivies', 'distance_domicile_travail',\n",
+       "       'niveau_education', 'domaine_etude', 'frequence_deplacement',\n",
+       "       'annees_depuis_la_derniere_promotion', 'annes_sous_responsable_actuel',\n",
+       "       'attrition_binary'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner.df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5c19c4b7-c1b3-480e-9659-4f4b712e66fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fuerza de asociación (Cramér's V): 0.9394\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cramers_v(var1, var2):\n",
+    "    # 1. Crear la tabla de contingencia (frecuencias cruzadas)\n",
+    "    contingency_table = pd.crosstab(var1, var2)\n",
+    "    chi2 = chi2_contingency(contingency_table)[0]\n",
+    "    n = contingency_table.sum().sum()\n",
+    "    \n",
+    "    # 2. Calcular dimensiones de la tabla\n",
+    "    phi2 = chi2 / n\n",
+    "    r, k = contingency_table.shape\n",
+    "    \n",
+    "    # 3. Aplicar la fórmula de normalización\n",
+    "    return np.sqrt(phi2 / min(k - 1, r - 1))\n",
+    "\n",
+    "# Ejemplo de uso:\n",
+    "resultado = cramers_v(cleaner.df['poste'], cleaner.df['departement'])\n",
+    "print(f\"Force d'association (Cramér's V): {resultado:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "10252821-4c1e-4e5a-ba0d-615ef25038d2",
    "metadata": {},
    "outputs": [],
@@ -2080,7 +2147,7 @@
     "                pairs.append((cols[i], cols[j], v_matrix.iloc[i, j]))\n",
     "    return pairs\n",
     "\n",
-    "redundantes = find_redundant_pairs(v_matrix, threshold=0.75) # Umbral sugerido por Bengio"
+    "redundantes = find_redundant_pairs(v_matrix, threshold=0.75) # Umbral sugerido  "
    ]
   },
   {
@@ -2093,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 24,
    "id": "a974d95c-9c63-443b-984c-4bef5d30033c",
    "metadata": {},
    "outputs": [
@@ -2659,7 +2726,7 @@
     "cleaner.df, meta_dict_enrichi = cleaner.supprier_colonnes_REDONDANTS(df = cleaner.df,\n",
     "    meta_dict      = meta_dict_enrichi, \n",
     "    cols_to_remove = cleaner.COLS_REDONDANTS, \n",
-    "    reason=f\"Numerical Correlation Pearson (Lineal) > {THRESHOLD_NUMERICAL_REDONDANCE} avec 'poste' {FEATURE_TARGET}\"\n",
+    "    reason=f\"Numerical Correlation Pearson (Lineal) > {THRESHOLD_NUMERICAL_REDONDANCE} avec {FEATURE_TARGET}\"\n",
     ")"
    ]
   },
@@ -2789,11 +2856,11 @@
     "\n",
     "# 4. Ahora tu info para el pipeline está garantizada\n",
     "info_final = {\n",
-    "    'num_log': cleaner.COLS_TO_LOG,\n",
+    "    'num_log'   : cleaner.COLS_TO_LOG,\n",
     "    'num_robust': cleaner.COLS_TO_ROBUST,\n",
-    "    'num_std': cleaner.COLS_STANDARD,\n",
-    "    'cat_ohe': cleaner.COLS_ONE_HOT_ENCODING, # Asumiendo que ya corriste el otro blueprint\n",
-    "    'indic_nan': cleaner.df.columns[cleaner.df.isnull().any()].tolist()\n",
+    "    'num_std'   : cleaner.COLS_STANDARD,\n",
+    "    'cat_ohe'   : cleaner.COLS_ONE_HOT_ENCODING, # Asumiendo que ya corriste el otro blueprint\n",
+    "    'indic_nan' : cleaner.df.columns[cleaner.df.isnull().any()].tolist()\n",
     "}"
    ]
   },
